--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,17 +25,13 @@ jobs:
         python -m pip install -r requirements.txt
     - name: Install testing dependencies
       run: |
-        python -m pip install black
-        python -m pip install interrogate
-        python -m pip install pytest
-        python -m pip install pytest-cov
-        python -m pip install pytest-flake8
-        python -m pip install pytest-randomly
+        python -m pip -r test_requirements.txt
     - name: Check format
       run: |
         python -m black -l 80 . --check
     - name: Check docstrings
       run: |
+        python -m pip install interrogate
         python -m interrogate -v --ignore-init-method --ignore-init-module --fail-under 100 fractpy --exclude fractpy/version.py --ignore-magic
     - name: Test with pytest
       run: |
