--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,7 +25,7 @@ jobs:
         python -m pip install -r requirements.txt
     - name: Install testing dependencies
       run: |
-        python -m pip -r test_requirements.txt
+        python -m pip install -r test_requirements.txt
     - name: Check format
       run: |
         python -m black -l 80 . --check
