--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,4 +36,4 @@ jobs:
     - name: Test with pytest
       run: |
         python setup.py develop
-        python -m pytest --cov=fractpy --flake8
+        python -m pytest --cov=fractpy --cov-fail-under=70 --flake8
