--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,12 @@ flake8-ignore =
     setup.py F821
     docs/_build/* ALL
     **/__init__.py F401 F403
+
+[tool:interrogate]
+ignore-init-method = true
+ignore-init-module = true
+ignore-magic = true
+ignore-property-decorators = true
+fail-under = 100
+exclude = fractpy/version.py
+verbose = 1
