--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 flake8-ignore =
     setup.py F821
     docs/_build/* ALL
+    docs/conf.py E402
     **/__init__.py F401 F403
 
 [tool:interrogate]
