--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -40,7 +40,8 @@ jobs:
     - name: Generate coverage report
       if: matrix.python-version == 3.8 && matrix.os == 'ubuntu-latest'
       run: |
-        pytest --cov=./fractpy/ --cov-report=xml
+        python -m pip install pytest-cov
+        python -m pytest --cov=./fractpy/ --cov-report=xml
     - name: Upload coverage to Codecov
       if: matrix.python-version == 3.8 && matrix.os == 'ubuntu-latest'
       uses: codecov/codecov-action@v1.4.1
