Update setup.cfg to ignore unsed plt figures in test_newton

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ flake8-ignore =
     docs/_build/* ALL
     docs/conf.py E402
     **/__init__.py F401 F403
+    tests/test_newton.py F841
 
 [tool:interrogate]
 ignore-init-method = true
