--- a/.pypirc
+++ b/.pypirc
@@ -7,5 +7,5 @@ index-servers =
 username: asinghgaba
 
 [pypitest]
-repository: https://test.pypi.org/legacy/
 username: asinghgaba
+password: Morse123Code__
