--- a/.pypirc
+++ b/.pypirc
@@ -4,8 +4,9 @@ index-servers =
   pypitest
 
 [pypi]
-username: asinghgaba
+username = asinghgaba
 
 [pypitest]
-username: asinghgaba
-password: Morse123Code__
+repository = https://testpypi.python.org/pypi
+username = asinghgaba
+password = Morse123Code__
