--- a/.pypirc
+++ b/.pypirc
@@ -4,9 +4,10 @@ index-servers =
   pypitest
 
 [pypi]
-username = asinghgaba
+repository: https://upload.pypi.org/legacy/
+username: asinghgaba
 
 [pypitest]
-repository = https://testpypi.python.org/pypi
-username = asinghgaba
-password = Morse123Code__
+repository: https://test.python.org/legacy/
+username: asinghgaba
+password: Morse123Code__
