--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,13 @@ build-backend = "flit_core.buildapi"
 module = "fractpy"
 author = "Amarjit Singh Gaba"
 author-email = "asinghgaba@gmail.com"
+requires = [
+    "numpy >=1.18.0",
+    "sympy >=1.5",
+    "matplotlib >=3.1.0",
+]
 home-page = "https://github.com/asinghgaba/fractpy"
 classifiers = [ "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python :: 3"]
 description-file = "README.md"
+requires-python = ">=3.6"
 
