--- a/tox.ini
+++ b/tox.ini
@@ -19,3 +19,4 @@ commands =
      python -m black --check tests/
      python -m interrogate -c setup.cfg fractpy
      python -m pytest --flake8
+     python -m pytest --cov=./fractpy/ --cov-report=xml
