--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,52 +5,45 @@ name: CI
 on: [push, pull_request]
 
 jobs:
-  build:
+    build:
+        runs-on: [ubuntu-latest, macOS-latest, windows-latest]
+        strategy:
+            matrix:
+                python-version: [3.6, 3.7, 3.8, 3.9]
 
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        env:
+            USING_COVERAGE: "3.9"
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install -r requirements.txt
-    - name: Install testing dependencies
-      run: |
-        python -m pip install -r tests/test_requirements.txt
-    - name: Check format
-      run: |
-        python -m black -l 79 . --check
-    - name: Check docstrings
-      run: |
-        python -m pip install interrogate
-        python -m interrogate -c setup.cfg fractpy
-    - name: Test with pytest
-      run: |
-        python setup.py develop
-        python -m pytest --flake8
-    - name: Generate coverage report
-      if: matrix.python-version == 3.8 && matrix.os == 'ubuntu-latest'
-      run: |
-        python -m pip install pytest-cov
-        python -m pytest --cov=./fractpy/ --cov-report=xml
-    - name: Upload coverage to Codecov
-      if: matrix.python-version == 3.8 && matrix.os == 'ubuntu-latest'
-      uses: codecov/codecov-action@v1.4.1
-      with:
-        files: ./coverage.xml
-        directory: ./coverage/reports/
-        flags: unittests
-        env_vars: OS,PYTHON
-        name: codecov-umbrella
-        fail_ci_if_error: true
-        path_to_write_report: ./coverage/codecov_report.txt
-        verbose: true
+        steps:
+            - name: Checkout sources
+              uses: actions/checkout@v2
+
+            - name: Set up Python
+              uses: actions/setup-python@v2
+              with:
+                  python-version: $
+
+            - name: Update pip
+              run: |
+                  python -m pip install --upgrade pip
+            
+            - name: Install tox
+              run: |
+                  python -m pip install tox
+                  
+            - name: Run tox
+              run: |
+                  python -m tox
+
+            - name: Upload coverage to Codecov
+              uses: codecov/codecov-action@v1.4.1
+              if: contains(env.USING_COVERAGE, matrix.python-version) && matrix.os == 'ubuntu-latest'
+              with:
+                files: ./coverage.xml
+                directory: ./coverage/reports/
+                flags: unittests
+                env_vars: OS,PYTHON
+                name: codecov-umbrella
+                fail_ci_if_error: true
+                path_to_write_report: ./coverage/codecov_report.txt
+                verbose: true
