--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -6,7 +6,7 @@ on: [push, pull_request]
 
 jobs:
     build:
-        runs-on: [ubuntu-latest, macOS-latest, windows-latest]
+        runs-on: ubuntu-latest
         strategy:
             matrix:
                 python-version: [3.6, 3.7, 3.8, 3.9]
