--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -21,7 +21,7 @@ jobs:
             - name: Set up Python
               uses: actions/setup-python@v2
               with:
-                  python-version: $
+                  python-version: ${{ matrix.python }}
 
             - name: Update pip
               run: |
@@ -33,7 +33,7 @@ jobs:
                   
             - name: Run tox
               run: |
-                  python -m tox
+                  python -m tox -e py
 
             - name: Upload coverage to Codecov
               uses: codecov/codecov-action@v1.4.1
