--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -6,13 +6,11 @@ on: [push, pull_request]
 
 jobs:
     build:
-        runs-on: ubuntu-latest
+        runs-on: ${{ matrix.os }}
         strategy:
             matrix:
-                python-version: [3.6, 3.7, 3.8, 3.9]
-
-        env:
-            USING_COVERAGE: "3.9"
+              os: [ubuntu-latest, macOS-latest, windows-latest]  
+              python-version: [3.6, 3.7, 3.8, 3.9]
 
         steps:
             - name: Checkout sources
@@ -29,15 +27,15 @@ jobs:
             
             - name: Install tox
               run: |
-                  python -m pip install tox
+                  python -m pip install tox tox-gh-actions
                   
             - name: Run tox
               run: |
-                  python -m tox -e py
+                  python -m tox
 
             - name: Upload coverage to Codecov
               uses: codecov/codecov-action@v1.4.1
-              if: contains(env.USING_COVERAGE, matrix.python-version) && matrix.os == 'ubuntu-latest'
+              if: matrix.python-version == 3.9 && matrix.os == 'ubuntu-latest'
               with:
                 files: ./coverage.xml
                 directory: ./coverage/reports/
