--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,6 @@
 [tox]
 isolated_build = True
-envlist = py36,py37,py38,py39
-
-[gh-actions]
-python =
-    3.6: py36
-    3.7: py37
-    3.8: py38
-    3.9: py39
+envlist = py39
 
 [testenv]
 deps =
