--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -23,15 +23,15 @@ jobs:
 
             - name: Update pip
               run: |
-                  python -m pip install --upgrade pip
+                  python3 -m pip install --upgrade pip
             
             - name: Install tox
               run: |
-                  python -m pip install tox tox-gh-actions
+                  python3 -m pip install tox tox-gh-actions
                   
             - name: Run tox
               run: |
-                  python -m tox
+                  python3 -m tox
 
             - name: Upload coverage to Codecov
               uses: codecov/codecov-action@v1.4.1
