--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,7 +31,7 @@ jobs:
                   
             - name: Run tox
               run: |
-                  python3 -m tox
+                  tox
 
             - name: Upload coverage to Codecov
               uses: codecov/codecov-action@v1.4.1
