--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,14 +10,14 @@ jobs:
         strategy:
             matrix:
               os: [ubuntu-latest, macOS-latest, windows-latest]  
-              python-version: [3.8]
+              python-version: ["3.8"]
 
         steps:
             - name: Checkout sources
               uses: actions/checkout@v2
 
             - name: Set up Python ${{ matrix.python-version }}
-              uses: actions/setup-python@v1
+              uses: actions/setup-python@v2
               with:
                   python-version: ${{ matrix.python }}
 
