--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,16 +10,16 @@ jobs:
         strategy:
             matrix:
               os: [ubuntu-latest, macOS-latest, windows-latest]  
-              python-version: [3.9]
+              python-version: [3.6, 3.7, 3.8, 3.9]
 
         steps:
             - name: Checkout sources
-              uses: actions/checkout@v1
+              uses: actions/checkout@v2
 
             - name: Set up Python ${{ matrix.python-version }}
               uses: actions/setup-python@v2
               with:
-                  python-version: ${{ matrix.python }}
+                  python-version: ${{ matrix.python-version }}
 
             - name: Update pip
               run: |
