--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,13 @@
 [tox]
 isolated_build = True
-envlist = py39
+envlist = py36, py37, py38, py39
+
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39
 
 [testenv]
 deps =
@@ -15,8 +22,8 @@ deps =
     pytest-randomly
     pytest-sugar
 commands =
-     python -m black --check fractpy/
-     python -m black --check tests/
-     python -m interrogate -c setup.cfg fractpy
-     python -m pytest --flake8
-     python -m pytest --cov=./fractpy/ --cov-report=xml
+    python -m black --check fractpy/
+    python -m black --check tests/
+    python -m interrogate -c setup.cfg fractpy
+    python -m pytest --flake8
+    python -m pytest --cov=./fractpy/ --cov-report=xml
