--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ python =
 [testenv]
 deps =
     numpy
-    scipy
+    sympy
     matplotlib
     black
     interrogate
@@ -24,6 +24,6 @@ deps =
 commands =
     python -m black --check fractpy/
     python -m black --check tests/
-    python -m interrogate -c setup.cfg fractpy
+    python -m interrogate fractpy
     python -m pytest --flake8
     python -m pytest --cov=./fractpy/ --cov-report=xml
