--- a/tox.ini
+++ b/tox.ini
@@ -24,3 +24,19 @@ commands =
     python -m interrogate fractpy
     python -m pytest --flake8
     python -m pytest --cov=./fractpy/ --cov-report=xml
+
+[testenv:dev]
+usedevelop = True
+deps =
+    black
+    interrogate
+    pytest
+    pytest-cov
+    pytest-flake8
+    pytest-randomly
+    pytest-sugar
+commands =
+    python -m black --check fractpy/
+    python -m black --check tests/
+    python -m interrogate fractpy
+    python -m pytest --flake8
