--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ commands =
     python -m pytest --cov=./fractpy/ --cov-report=xml
 
 [testenv:dev]
-usedevelop = True
+basepython = python3.9
 deps =
     black
     interrogate
