--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -13,7 +13,7 @@
       "contributions": [
         "code",
         "bug",
-        "research",
+        "content",
         "doc",
         "design",
         "example",
